compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__value_imported_as_type.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "import gleam/wibble.{type Wobble}"
---
error: Unknown module type
  ┌─ /src/one/two.gleam:1:22
  │
1 │ import gleam/wibble.{type Wobble}
  │                      ^^^^^^^^^^^ Did you mean `Wobble`?

`Wobble` is only a value, it cannot be imported as a type.
